Fixed spacing issue with header

--- a/arcgis.css
+++ b/arcgis.css
@@ -6,7 +6,7 @@
 
 #HomeButton {
     position: absolute;
-    top: 95px;
-    left: 26px;
+    top: 170px;
+    left: 20px;
     z-index: 50;
 }
